# mesa

./: configure.ac
include/EGL/: eglmesaext.h
include/GL/internal/: dri_interface.h
include/pci_ids/: virgl_pci_ids.h  virtio_gpu_pci_ids.h
src/: Makefile.am
src/egl/drivers/dri2/: egl_dri2.c
src/egl/main/: eglapi.c  eglapi.h  egldisplay.h  eglfallbacks.c  eglmisc.c
src/gallium/: Makefile.am
src/gallium/auxiliary/indices/: u_indices.c  u_indices.h  u_indices_gen.py  u_unfilled_gen.py  u_unfilled_indices.c
src/gallium/auxiliary/target-helpers/: inline_drm_helper.h  inline_sw_helper.h  inline_wrapper_sw_helper.h
src/gallium/auxiliary/tgsi/: tgsi_dump.c  tgsi_exec.c  tgsi_text.c
src/gallium/auxiliary/vl/: vl_winsys_dri.c
src/gallium/drivers/: Makefile.am
src/gallium/drivers/freedreno/: freedreno_screen.c
src/gallium/drivers/nouveau/: nouveau_fence.c  nouveau_screen.c
src/gallium/drivers/nouveau/nvc0/: nvc0_screen.c
src/gallium/drivers/qxl/: Makefile.am  Makefile.sources  qxl_context.c  qxl_context.h  qxl_public.h  qxl_screen.c  qxl_screen.h  qxl_texture.c  qxl_winsys.h
src/gallium/drivers/rempipe/: Makefile  Makefile.am  graw_context.c  graw_context.h  graw_drm_winsys.c  graw_encode.c  graw_encode.h  graw_pipe_winsys.c  graw_pipe_winsys.h  graw_protocol.h  graw_query.c  graw_transfer.c  rempipe.h  rempipe_screen.c  rp_public.h
src/gallium/drivers/vc4/: vc4_screen.c
src/gallium/drivers/virgl/: Makefile.am  graw_context.c  graw_context.h  graw_drm_winsys.c  graw_encode.c  graw_encode.h  graw_pipe_winsys.h  graw_protocol.h  graw_query.c  graw_streamout.c  graw_transfer.c  virgl.h  virgl_buffer.c  virgl_context.c  virgl_context.h  virgl_encode.c  virgl_encode.h  virgl_protocol.h  virgl_public.h  virgl_query.c  virgl_resource.c  virgl_resource.h  virgl_screen.c  virgl_streamout.c  virgl_texture.c  virgl_winsys.h
src/gallium/include/state_tracker/: drisw_api.h  drm_driver.h  sw_winsys.h  winsys_handle.h
src/gallium/renderer/: Makefile.am  Makefile.sources  graw_context.c  graw_cursor.c  graw_cursor.h  graw_decode.c  graw_decode.h  graw_encode.c  graw_encode.h  graw_formats.c  graw_iov.h  graw_object.c  graw_object.h  graw_pipe_renderer.c  graw_pipe_winsys.c  graw_protocol.h  graw_qemu_lib_renderer.c  graw_renderer.c  graw_renderer.h  graw_renderer_glut.c  graw_renderer_glut.h  graw_renderer_glx.c  graw_renderer_glx.h  graw_renderer_helper.c  graw_renderer_lib_if.h  graw_shader.c  graw_shader.h  graw_shm_renderer.c  graw_util.c  graw_util.h  graw_virtio_lib_renderer.c  iov.c  ipc_ring.h  quad-tex.c  qxl_3d_dev.h  renderer_notes.txt  tri.c  virgl_egl.h  virgl_egl_context.c  virgl_helper.h  (+18 more)
src/gallium/state_trackers/dri/: dri2.c  drisw.c
src/gallium/state_trackers/nine/: swapchain9.c
src/gallium/state_trackers/xa/: xa_tracker.c
src/gallium/targets/: Makefile.am
src/gallium/targets/dri/: Makefile.am
src/gallium/targets/dri-qxl/: Makefile  Makefile.am  target.c
src/gallium/targets/dri-swrast/: Makefile.am
src/gallium/targets/dri-virgl/: Makefile.am  target.c
src/gallium/winsys/: Makefile.am
src/gallium/winsys/i915/drm/: i915_drm_buffer.c
src/gallium/winsys/intel/drm/: intel_drm_winsys.c
src/gallium/winsys/qxl/drm/: Makefile.am  Makefile.sources  qxl_drm_public.h  qxl_drm_winsys.c  qxl_drm_winsys.h
src/gallium/winsys/radeon/drm/: radeon_drm_bo.c
src/gallium/winsys/svga/drm/: vmw_screen_dri.c  vmw_screen_ioctl.c
src/gallium/winsys/sw/dri/: dri_sw_winsys.c
src/gallium/winsys/sw/kms-dri/: kms_dri_sw_winsys.c
src/gallium/winsys/virgl/drm/: Makefile.am  virgl_drm_public.h  virgl_drm_winsys.c  virgl_drm_winsys.h  virgl_hw.h
src/gallium/winsys/virgl/vtest/: virgl_vtest_public.h  virgl_vtest_socket.c  virgl_vtest_winsys.c  virgl_vtest_winsys.h  vtest_protocol.h
src/glx/: drisw_glx.c
src/loader/: pci_id_driver_map.h
src/mesa/drivers/dri/i965/: intel_screen.c  intel_tex_image.c
